--- a/bower.json
+++ b/bower.json
@@ -3,13 +3,18 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.4.0",
-    "bootstrap-sass-official": "^3.2.0",
     "angular-animate": "^1.4.0",
     "angular-cookies": "^1.4.0",
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0"
+    "angular-touch": "^1.4.0",
+    "angular-ui-router": "^0.3.1",
+    "angular-material": "^1.0.9",
+    "sweetalert2": "^4.0.8",
+    "components-font-awesome": "^4.6.3",
+    "ng-lodash": "^0.5.0",
+    "ngGeolocation": "^0.0.8"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
