--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "node": ">=0.10.0"
   },
   "dependencies": {
-    "express": "^4.14.0",
+    "connect": "^3.4.1",
+    "express": "~3.0.0",
     "gzippo": "^0.2.0"
   }
 }
