--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "sweetalert2": "^4.0.8",
     "components-font-awesome": "^4.6.3",
     "ng-lodash": "^0.5.0",
-    "ngGeolocation": "^0.0.8"
+    "ngGeolocation": "^0.0.8",
+    "angular-google-maps": "^2.3.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
