--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,12 @@
     "components-font-awesome": "^4.6.3",
     "ng-lodash": "^0.5.0",
     "ngGeolocation": "^0.0.8",
-    "angular-google-maps": "^2.3.3"
+    "angular-google-maps": "^2.3.3",
+    "angular-local-storage": "^0.2.7",
+    "angular-audio": "^1.7.2",
+    "angular-momentjs": "^0.2.2",
+    "angular-vibrator": "^0.2.0",
+    "angular-timer": "^1.3.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
