--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "connect": "^3.4.1",
     "express": "~4.0.0",
     "gzippo": "^0.2.0",
-    "pokego-scan": "^0.1.5"
+    "pokego-scan": "^0.1.5",
+    "body-parser": "^1.15.2",
+    "engine.io-client": "^1.6.11",
+    "lodash": "^4.13.1"
   }
 }
