--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "angular-audio": "^1.7.2",
     "angular-momentjs": "^0.2.2",
     "angular-vibrator": "^0.2.0",
-    "angular-timer": "^1.3.4"
+    "angular-timer": "^1.3.4",
+    "angular-notify": "^2.5.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
